--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,7 @@
 {
   "short_name": "Chess",
   "name": "Chess-er",
-  "icons": [
-    {
+  "icons": [{
       "src": "index.jpeg",
       "type": "image/jpeg",
       "sizes": "192x192"
@@ -13,10 +12,14 @@
       "sizes": "512x512"
     }
   ],
-  "start_url":"/",
+  "start_url": "/",
   "background_color": "#3367D6",
   "display": "standalone",
   "scope": "/",
-  "theme_color": "#3367D6"
+  "theme_color": "#3367D6",
+  "prefer_related_applications": true,
+  "related_applications": [{
+    "platform": "play",
+    "id": "com.google.samples.apps.chess"
+  }]
 }
-
