--- a/manifest.json
+++ b/manifest.json
@@ -7,8 +7,8 @@
       "sizes": "192x192"
     },
     {
-      "src": "index.jpeg",
-      "type": "image/jpeg",
+      "src": "index.png",
+      "type": "image/png",
       "sizes": "512x512"
     }
   ],
