--- a/manifest.json
+++ b/manifest.json
@@ -12,10 +12,9 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/index.html",
+  "start_url": "index.html",
   "background_color": "#3367D6",
   "display": "standalone",
-  "scope": "/",
   "theme_color": "#3367D6",
   "prefer_related_applications": true,
   "related_applications": [{
